--- a/ui-qt/src/mainwindow.ui
+++ b/ui-qt/src/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -124,7 +124,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>Procesar</string>
       </property>
      </widget>
     </widget>
