--- a/ui-qt/src/mainwindow.ui
+++ b/ui-qt/src/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -287,7 +287,8 @@
                <string>Atender Siguiente Ticket</string>
               </property>
               <property name="icon">
-               <iconset theme="go-next"/>
+               <iconset theme="go-next">
+                <normaloff>.</normaloff>.</iconset>
               </property>
              </widget>
             </item>
